      NOTE: an underscore ('_') matches both a space (' ') and an underscore ('_'),
            so this ban would match 'Stupid bot script v1.4'.

  These bantypes can also be used in the channel exception list (+e).
  +e ~r:*w00t* makes anyone with 'w00t' in their realname able to join,
  and +e ~c:#admin makes anyone in #admin able to join, etc..

  This system allows modules to add extended bantypes too.

  This feature requires some additional testing, also the module interface will
  probably be changed in the next few weeks, and perhaps more extended bans will
  be added before next release.. we'll see...
- Updated win32 makefile...
- Module-systemized the extban stuff
- As expected, fixed a crashbug in extended bans system. Reported by Rocko (#0001444).
- internal: changed is_banned() again: cptr,sptr -> sptr (dropped cptr). It was too
  confusing (and thus causing bad code/bugs) and was never used anyway.
- Added a function join_channel which will make it easier for module coders to force users
  to join a channel
- Made it possible to compile the win32 version with libcurl support
- Updated the win32 TRE lib/dll to the latest version (0.6.3)
- Fixed a PATH_MAX vs MAX_PATH problem
- Fixed a bug where if a Mod_Load returned MOD_FAILED, the module was not removed (#0001426)
  reported by AngryWolf
- Fixed a bunch of oper fdlist bugs regarding locops
- Fixed a couple of minor typos in the source
- Removed the old configure checks for pthreads
- Added configure/Config stuff for libcurl
- Added a ./curlinstall script to help with installing curl (Read INSTALL.REMOTEINC for
  more information).
- Added code to make remote includes able to use SSL (HTTPS/FTPS) if SSL support is enabled
- Fixed a remote include bug with rehashing when no remote includes were loaded
- Fixed a remote include compile bug on Linux regarding url.h
- Fixed a remote include compile bug regarding ares (#0001458) reported by mustapha88
- Made the tmp/ directory cleaned up better